--- a/arch/arm/configs/nin_defconfig
+++ b/arch/arm/configs/nin_defconfig
@@ -1486,7 +1486,7 @@ CONFIG_INPUT_MOUSEDEV_SCREEN_X=1024
 CONFIG_INPUT_MOUSEDEV_SCREEN_Y=768
 # CONFIG_INPUT_JOYDEV is not set
 CONFIG_INPUT_EVDEV=y
-# CONFIG_INPUT_EVBUG is not set
+CONFIG_INPUT_EVBUG=m
 CONFIG_INPUT_KEYRESET=y
 
 #
@@ -1606,6 +1606,11 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_ATMEL_224E is not set
 # CONFIG_TOUCHSCREEN_CYPRESS_CS is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_3K=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE_START="y"
+CONFIG_TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE_END="y"
+CONFIG_CMDLINE_OPTIONS=y
+# CONFIG_TOUCHSCREEN_MAX11871 is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
