--- a/arch/arm/configs/nin_defconfig
+++ b/arch/arm/configs/nin_defconfig
@@ -39,15 +39,15 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="haunted-test2"
+CONFIG_LOCALVERSION="Haunted-Kernel-v30.2"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_XZ=y
 CONFIG_HAVE_KERNEL_LZO=y
-CONFIG_KERNEL_GZIP=y
+# CONFIG_KERNEL_GZIP is not set
 # CONFIG_KERNEL_LZMA is not set
-# CONFIG_KERNEL_XZ is not set
+CONFIG_KERNEL_XZ=y
 # CONFIG_KERNEL_LZO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -116,7 +116,9 @@ CONFIG_RD_BZIP2=y
 CONFIG_RD_LZMA=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
-CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+# CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
+# CONFIG_CC_OPTIMIZE_DEFAULT is not set
+CONFIG_CC_OPTIMIZE_ALOT=y
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_PANIC_TIMEOUT=5
@@ -444,6 +446,7 @@ CONFIG_MSM_IPC_ROUTER=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 # CONFIG_MSM_IPC_ROUTER_SECURITY is not set
 # CONFIG_MSM_DALRPC is not set
+CONFIG_CPU_VOLTAGE_TABLE=y
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
 CONFIG_MSM_AVS_HW=y
 # CONFIG_MSM_HW3D is not set
@@ -612,6 +615,7 @@ CONFIG_VMSPLIT_3G=y
 CONFIG_PAGE_OFFSET=0xC0000000
 CONFIG_NR_CPUS=2
 CONFIG_HOTPLUG_CPU=y
+CONFIG_ARM_AUTO_HOTPLUG=y
 CONFIG_LOCAL_TIMERS=y
 CONFIG_ARCH_NR_GPIO=0
 # CONFIG_PREEMPT_NONE is not set
@@ -690,9 +694,10 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LAGFREE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -710,6 +715,7 @@ CONFIG_CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER=1000
 CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 
 #
 # ARM CPU frequency scaling drivers
@@ -1606,11 +1612,6 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_ATMEL_224E is not set
 # CONFIG_TOUCHSCREEN_CYPRESS_CS is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_3K=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE_START="y"
-CONFIG_TOUCHSCREEN_SYNAPTICS_SWEEP2WAKE_END="y"
-CONFIG_CMDLINE_OPTIONS=y
-# CONFIG_TOUCHSCREEN_MAX11871 is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
@@ -2018,6 +2019,8 @@ CONFIG_THERMAL_TSENS8960=y
 # CONFIG_THERMAL_TSENS8974 is not set
 CONFIG_THERMAL_PM8XXX=y
 CONFIG_THERMAL_MONITOR=y
+CONFIG_THERMAL_MAX_TEMP_PROTECT=y
+CONFIG_THERMAL_MIN_TEMP_PROTECT=y
 # CONFIG_WATCHDOG is not set
 CONFIG_SSB_POSSIBLE=y
 
@@ -3098,6 +3101,7 @@ CONFIG_PM_DEVFREQ=y
 #
 # File systems
 #
+CONFIG_DYNAMIC_FSYNC=y
 # CONFIG_EXT2_FS is not set
 # CONFIG_EXT3_FS is not set
 CONFIG_EXT4_FS=y
