fix usb otg for jewel aosp kernel

--- a/drivers/usb/Kconfig
+++ b/drivers/usb/Kconfig
@@ -172,6 +172,11 @@ config USB_USS720
 	  To compile this driver as a module, choose M here: the
 	  module will be called uss720.
 
+config USB_OTG_HOST
+        boolean "USB OTG Host function"
+        depends on USB_OTG
+        default n
+
 source "drivers/usb/serial/Kconfig"
 
 source "drivers/usb/misc/Kconfig"
